--- a/TutorCenter.Administrator/Views/Course/Create.cshtml
+++ b/TutorCenter.Administrator/Views/Course/Create.cshtml
@@ -1,6 +1,6 @@
-﻿@using CED.Contracts.Subjects
-@using CED.Domain.Shared.ClassInformationConsts
-@model CED.Contracts.ClassInformations.Dtos.ClassInformationForEditDto
+﻿@using TutorCenter.Contracts.Subjects
+@using TutorCenter.Domain.Shared.ClassInformationConsts
+@model TutorCenter.Contracts.ClassInformations.Dtos.ClassInformationForEditDto
 
 @{
     ViewData["Title"] = "Edit";
