--- a/TutorCenter.Administrator/Views/Course/Detail.cshtml
+++ b/TutorCenter.Administrator/Views/Course/Detail.cshtml
@@ -1,4 +1,4 @@
-﻿@model CED.Contracts.ClassInformations.Dtos.ClassInformationForDetailDto
+﻿@model TutorCenter.Contracts.ClassInformations.Dtos.ClassInformationForDetailDto
 
 @{
     ViewData["Title"] = "Details";
