--- a/TutorCenter.Administrator/Views/Course/Edit.cshtml
+++ b/TutorCenter.Administrator/Views/Course/Edit.cshtml
@@ -1,7 +1,7 @@
-﻿@using CED.Contracts.Subjects
-@using CED.Contracts
+﻿@using TutorCenter.Contracts.Subjects
+@using TutorCenter.Contracts
 
-@model CED.Contracts.ClassInformations.Dtos.ClassInformationForEditDto
+@model TutorCenter.Contracts.ClassInformations.Dtos.ClassInformationForEditDto
 
 @{
     ViewData["Title"] = "Edit";
