--- a/TutorCenter.Administrator/Views/Course/Index.cshtml
+++ b/TutorCenter.Administrator/Views/Course/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<CED.Contracts.ClassInformations.Dtos.ClassInformationForListDto>
+﻿@model List<TutorCenter.Contracts.ClassInformations.Dtos.ClassInformationForListDto>
 @{
     int i = 0;
 }
