--- a/TutorCenter.Administrator/Views/Course/PickTutor.cshtml
+++ b/TutorCenter.Administrator/Views/Course/PickTutor.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<CED.Contracts.Users.Tutors.TutorForListDto>
+﻿@model List<TutorCenter.Contracts.Users.Tutors.TutorForListDto>
 @{
     int i = 0;
     Layout = "_ScriptLayout";
