--- a/TutorCenter.Administrator/Views/Course/_TutorReview.cshtml
+++ b/TutorCenter.Administrator/Views/Course/_TutorReview.cshtml
@@ -1,4 +1,4 @@
-@model CED.Contracts.TutorReview.TutorReviewDto
+@model TutorCenter.Contracts.TutorReview.TutorReviewDto
 @{
 }
 <form asp-action="RemoveReview" asp-controller="ClassInformation" onclick="this.submit(); this.hide(); return false;">
