finish tutor,user,auth,profile,home

--- a/TutorCenter.Administrator/Views/Home/_PieChart.cshtml
+++ b/TutorCenter.Administrator/Views/Home/_PieChart.cshtml
@@ -1,4 +1,5 @@
-﻿@model PieChartViewModel
+﻿@using TutorCenter.Web.Models;
+@model PieChartViewModel
 
 <h5 class="card-title"> Current Status <span>| @Model.ByTime </span></h5>
 
