--- a/TutorCenter.Administrator/Views/Home/_TotalClasses.cshtml
+++ b/TutorCenter.Administrator/Views/Home/_TotalClasses.cshtml
@@ -1,4 +1,6 @@
-﻿@model TotalValueModel<TutorCenter.Contracts.ClassInformations.Dtos.ClassInformationForListDto>
+﻿@using TutorCenter.Application.Contracts.Courses.Dtos;
+@using TutorCenter.Web.Models;
+@model TotalValueModel<CourseForListDto>
 
 <!-- Change Password Form -->
 <h5 class="card-title">Classes <span>| @Model.Time </span></h5>
