--- a/TutorCenter.Administrator/Views/Home/_TotalStudents.cshtml
+++ b/TutorCenter.Administrator/Views/Home/_TotalStudents.cshtml
@@ -1,4 +1,6 @@
-﻿@model TotalValueModel<TutorCenter.Contracts.Users.LearnerDto>
+﻿@using TutorCenter.Application.Contracts.Users.Learners;
+@using TutorCenter.Web.Models;
+@model TotalValueModel<LearnerDto>
 
 <!-- Change Password Form -->
 <h5 class="card-title">Students <span>| @Model.Time </span></h5>
