--- a/TutorCenter.Administrator/Views/Home/_TotalTutors.cshtml
+++ b/TutorCenter.Administrator/Views/Home/_TotalTutors.cshtml
@@ -1,4 +1,6 @@
-﻿@model TotalValueModel<TutorCenter.Contracts.Users.Tutors.TutorForListDto>
+﻿@using TutorCenter.Application.Contracts.Users.Tutors;
+@using TutorCenter.Web.Models;
+@model TotalValueModel<TutorForListDto>
 
 <!-- Change Password Form -->
 <h5 class="card-title">Tutors <span>| @Model.Time </span></h5>
