--- a/TutorCenter.Administrator/Views/Profile/_ChangePassword.cshtml
+++ b/TutorCenter.Administrator/Views/Profile/_ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model TutorCenter.Contracts.Authentication.ChangePasswordRequest
+﻿@model TutorCenter.Application.Contracts.Authentications.ChangePasswordCommand;
 
 <!-- Change Password Form -->
 <form asp-action="ChangePassword" asp-controller="Profile" onsubmit="return callPostActionWithForm(this);">
