--- a/TutorCenter.Administrator/Views/Tutor/Create.cshtml
+++ b/TutorCenter.Administrator/Views/Tutor/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@using TutorCenter.Domain.Shared
-@model TutorCenter.Contracts.Users.Tutors.TutorForDetailDto
+﻿@using TutorCenter.Domain;
+@model TutorCenter.Application.Contracts.Users.Tutors.TutorForDetailDto
 
 @{
     ViewData["Title"] = "Create";
