--- a/TutorCenter.Administrator/Views/Tutor/Delete.cshtml
+++ b/TutorCenter.Administrator/Views/Tutor/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model TutorCenter.Contracts.Users.Tutors.TutorForDetailDto
+﻿@using TutorCenter.Application.Contracts.Users.Tutors;
+@model TutorForDetailDto
 
 @{
     ViewData["Title"] = "Delete";
