--- a/TutorCenter.Administrator/Views/Tutor/_Subjects.cshtml
+++ b/TutorCenter.Administrator/Views/Tutor/_Subjects.cshtml
@@ -1,4 +1,4 @@
-﻿@using TutorCenter.Contracts.Subjects
+﻿@using TutorCenter.Application.Contracts.Courses.Dtos;
 @model List<SubjectDto>
 @{
     int i = 0;
