--- a/TutorCenter.Administrator/Views/User/Detail.cshtml
+++ b/TutorCenter.Administrator/Views/User/Detail.cshtml
@@ -1,4 +1,5 @@
-﻿@model TutorCenter.Contracts.Users.UserDto
+﻿@using TutorCenter.Application.Contracts.Users;
+@model UserDto
 
 @{
     ViewData["Title"] = "Details";
