--- a/TutorCenter.Administrator/Views/User/Edit.cshtml
+++ b/TutorCenter.Administrator/Views/User/Edit.cshtml
@@ -1,5 +1,6 @@
-﻿@using TutorCenter.Domain.Shared.ClassInformationConsts
-@model TutorCenter.Contracts.Users.UserDto
+﻿@using TutorCenter.Application.Contracts.Users;
+@using TutorCenter.Domain.ClassInformationConsts;
+@model UserDto
 
 @{
     ViewData["Title"] = "Edit";
