--- a/TutorCenter.Administrator/Views/Profile/Profile.cshtml
+++ b/TutorCenter.Administrator/Views/Profile/Profile.cshtml
@@ -1,6 +1,7 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+@using TutorCenter.Web.Models;
 @model ProfileViewModel
 @{
     List<string> genders = ViewData["Genders"] as List<string> ?? new List<string>();
