--- a/TutorCenter.Administrator/Views/Profile/_ProfileOverview.cshtml
+++ b/TutorCenter.Administrator/Views/Profile/_ProfileOverview.cshtml
@@ -1,4 +1,5 @@
-﻿@model TutorCenter.Contracts.Users.UserDto
+﻿@using TutorCenter.Web.Models;
+@model TutorCenter.Application.Contracts.Users.UserDto;
 
 
 <h5 class="card-title">About</h5>
