--- a/TutorCenter.Administrator/Views/User/Student.cshtml
+++ b/TutorCenter.Administrator/Views/User/Student.cshtml
@@ -1,4 +1,4 @@
-﻿@using TutorCenter.Contracts.Users
+﻿@using TutorCenter.Application.Contracts.Users.Learners;
 @model List<LearnerDto>
 @{
     int i = 0;
