--- a/TutorCenter.Administrator/Views/User/Tutor.cshtml
+++ b/TutorCenter.Administrator/Views/User/Tutor.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<TutorCenter.Contracts.Users.Tutors.TutorForListDto>
+﻿@using TutorCenter.Application.Contracts.Users.Tutors;
+@model List<TutorForListDto>
 @{
     int i = 0;
 }
