Update  View , Controller ( Course, Subject)

--- a/TutorCenter.Administrator/Views/Course/Create.cshtml
+++ b/TutorCenter.Administrator/Views/Course/Create.cshtml
@@ -1,6 +1,6 @@
-﻿@using CED.Contracts.Subjects
-@using CED.Domain.Shared.ClassInformationConsts
-@model CED.Contracts.ClassInformations.Dtos.ClassInformationForEditDto
+﻿@using TutorCenter.Application.Contracts.Subjects
+@using TutorCenter.Domain.CourseConsts
+@model TutorCenter.Application.Contracts.Courses.Dtos.CourseForDetailDto
 
 @{
     ViewData["Title"] = "Edit";
