--- a/TutorCenter.Administrator/Views/Course/Detail.cshtml
+++ b/TutorCenter.Administrator/Views/Course/Detail.cshtml
@@ -1,5 +1,4 @@
-﻿@model CED.Contracts.ClassInformations.Dtos.ClassInformationForDetailDto
-
+﻿@model TutorCenter.Application.Contracts.Courses.Dtos.CourseForDetailDto
 @{
     ViewData["Title"] = "Details";
 }
