--- a/TutorCenter.Administrator/Views/Course/ViewTutor.cshtml
+++ b/TutorCenter.Administrator/Views/Course/ViewTutor.cshtml
@@ -1,4 +1,4 @@
-﻿@model CED.Contracts.Users.Tutors.TutorForDetailDto
+﻿@model TutorCenter.Application.Contracts.Users.Tutors.TutorForDetailDto
 
 @{
     ViewData["Title"] = "Details";
