--- a/TutorCenter.Administrator/Views/Course/_EditRequest.cshtml
+++ b/TutorCenter.Administrator/Views/Course/_EditRequest.cshtml
@@ -1,5 +1,5 @@
-@using TutorCenter.Domain.Shared.CourseConsts
-@model TutorCenter.Applicantion.Contracts.Courses.Dtos.RequestGettingClassMinimalDto
+@using TutorCenter.Domain.ClassInformationConsts
+@model TutorCenter.Application.Contracts.Courses.Dtos.RequestGettingClassMinimalDto
 @{
 }
 <form asp-action="CancelRequest" asp-controller="Course" >
