--- a/TutorCenter.Administrator/Views/Course/Delete.cshtml
+++ b/TutorCenter.Administrator/Views/Course/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model CED.Contracts.ClassInformations.Dtos.ClassInformationForEditDto
+﻿@model TutorCenter.Application.Contracts.Courses.Dtos.CourseForDetailDto
 
 
 @{
