--- a/TutorCenter.Administrator/Views/Tutor/_Subjects.cshtml
+++ b/TutorCenter.Administrator/Views/Tutor/_Subjects.cshtml
@@ -1,5 +1,4 @@
-﻿@using TutorCenter.Application.Contracts.Courses.Dtos;
-@model List<SubjectDto>
+﻿@model List<TutorCenter.Application.Contracts.Subjects.SubjectDto>
 @{
     int i = 0;
 }
