--- a/TutorCenter.Administrator/Views/Authentication/Login.cshtml
+++ b/TutorCenter.Administrator/Views/Authentication/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@model TutorCenter.Application.Contracts.Authentications.LoginQuery
+@model TutorCenter.Application.Services.Authentication.Admin.Queries.Login.LoginQuery
 @{
     Layout = "_Layout1";
     bool isFail = ViewBag.isFail ?? false;
