--- a/TutorCenter.Administrator/Views/Course/Create.cshtml
+++ b/TutorCenter.Administrator/Views/Course/Create.cshtml
@@ -8,7 +8,6 @@
     List<string> learningModes = ViewData["LearningModes"] as List<string> ?? new List<string>();
 
     List<SubjectDto>? subjects = (List<SubjectDto>)(ViewData["Subjects"] ?? "");
-
 }
 <h1>Create new class</h1>
 
@@ -20,7 +19,7 @@
 
 <h4>@Model.Title</h4>
 
-<hr />
+<hr/>
 <div class="card">
     <div class="card-body">
         <h5 class="card-title">Class' Information</h5>
@@ -31,7 +30,7 @@
 
             <div class="col-md-6">
                 <label asp-for="Title" class="form-label">Title</label>
-                <input type="text" asp-for="Title" class="form-control" />
+                <input type="text" asp-for="Title" class="form-control"/>
                 <span asp-validation-for="Title" class="text-danger"></span>
 
             </div>
@@ -39,8 +38,7 @@
             <div class="col-md-3">
                 <label asp-for="SubjectId" class="form-label">Subject Name</label>
                 <select asp-for="SubjectId" class="form-select">
-                    
-                    
+
 
                     @foreach (var i in subjects)
                     {
@@ -55,9 +53,10 @@
                 <span asp-validation-for="SubjectId" class="text-danger"></span>
             </div>
             <div class="col-md-3">
-                     <label asp-for="LearnerName" class="form-label">Learner Name</label>
-                       <input type="text" class="form-control" asp-for="LearnerName" placeholder="John Nathan" />
-                       <span asp-validation-for="LearnerName" class="text-danger"></span></div>
+                <label asp-for="LearnerName" class="form-label">Learner Name</label>
+                <input type="text" class="form-control" asp-for="LearnerName" placeholder="John Nathan"/>
+                <span asp-validation-for="LearnerName" class="text-danger"></span>
+            </div>
             <!-- ----------------------------------- -->
 
             <div class="col-md-4">
@@ -111,19 +110,19 @@
 
             <div class="col-md-4">
                 <label asp-for="Fee" class="form-label">Fee</label>
-                <input type="number" class="form-control" asp-for="Fee" placeholder="0.99" />
+                <input type="number" class="form-control" asp-for="Fee" placeholder="0.99"/>
                 <span asp-validation-for="Fee" class="text-danger"></span>
 
             </div>
             <div class="col-md-4">
                 <label asp-for="ChargeFee" class="form-label">Charge Fee</label>
-                <input type="number" class="form-control" asp-for="ChargeFee" placeholder="0.99" />
+                <input type="number" class="form-control" asp-for="ChargeFee" placeholder="0.99"/>
                 <span asp-validation-for="ChargeFee" class="text-danger"></span>
 
             </div>
             <div class="col-md-4">
                 <label asp-for="ContactNumber" class="form-label">Contact Number</label>
-                <input type="text" class="form-control" asp-for="ContactNumber" placeholder="ex: 09325631723" />
+                <input type="text" class="form-control" asp-for="ContactNumber" placeholder="ex: 09325631723"/>
                 <span asp-validation-for="ContactNumber" class="text-danger"></span>
 
             </div>
@@ -155,19 +154,19 @@
             </div>
             <div class="col-md-3">
                 <label asp-for="NumberOfLearner" class="form-label">Number Of Student</label>
-                <input type="number" class="form-control" asp-for="NumberOfLearner" value="1" />
+                <input type="number" class="form-control" asp-for="NumberOfLearner" value="1"/>
                 <span asp-validation-for="NumberOfLearner" class="text-danger"></span>
 
             </div>
             <div class="col-md-3">
                 <label asp-for="MinutePerSession" class="form-label">Minute/Session</label>
-                <input type="number" class="form-control" asp-for="MinutePerSession" value="90" />
+                <input type="number" class="form-control" asp-for="MinutePerSession" value="90"/>
                 <span asp-validation-for="MinutePerSession" class="text-danger"></span>
 
             </div>
             <div class="col-md-3">
                 <label asp-for="SessionPerWeek" class="form-label">Session/Week</label>
-                <input type="number" class="form-control" asp-for="SessionPerWeek" value="1" />
+                <input type="number" class="form-control" asp-for="SessionPerWeek" value="1"/>
                 <span asp-validation-for="SessionPerWeek" class="text-danger"></span>
 
             </div>
@@ -175,9 +174,13 @@
 
             <div class="col-12">
                 <label asp-for="Address" class="form-label">Address</label>
-                <input type="text" class="form-control" asp-for="Address" placeholder="1234 Main St" />
+                <input type="text" class="form-control" asp-for="Address" placeholder="1234 Main St"/>
                 <span asp-validation-for="Address" class="text-danger"></span>
 
+            </div>
+
+            <div class="text-center">
+                <button type="submit" class="btn btn-primary">Submit</button>
             </div>
             @Html.AntiForgeryToken()
         </form><!-- End Multi Columns Form -->
@@ -186,10 +189,8 @@
 </div>
 
 
-
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
-
