--- a/TutorCenter.Administrator/Views/User/Detail.cshtml
+++ b/TutorCenter.Administrator/Views/User/Detail.cshtml
@@ -1,4 +1,4 @@
-﻿@model TutorCenter.Application.Contracts.Users.UserDto
+﻿@model TutorCenter.Application.Contracts.Users.UserForDetailDto
 
 @{
     ViewData["Title"] = "Details";
