--- a/TutorCenter.Administrator/Views/User/Index.cshtml
+++ b/TutorCenter.Administrator/Views/User/Index.cshtml
@@ -48,8 +48,7 @@
                         <td>
                             <a asp-action="Edit" asp-route-id="@user.Id">Edit</a>|
                             <a asp-action="Detail" asp-route-id="@user.Id">Details</a> |
-
-                            <a href="#" onclick="OpenGetDialog('@Url.Action("Delete","User",new {id = @user.Id})','Are you sure you want to delete this user?');">Delete</a>
+                            <a asp-action="DeleteConfirmed" asp-route-id="@user.Id">Delete</a> |
                         </td>
                     </tr>
                 }
