--- a/TutorCenter.Administrator/Views/Profile/_ProfileOverview.cshtml
+++ b/TutorCenter.Administrator/Views/Profile/_ProfileOverview.cshtml
@@ -1,4 +1,4 @@
-﻿@model TutorCenter.Application.Contracts.Users.UserDto;
+﻿@model TutorCenter.Application.Contracts.Users.UserForDetailDto
 
 
 <h5 class="card-title">About</h5>
