--- a/TutorCenter.Administrator/Views/Subject/Edit.cshtml
+++ b/TutorCenter.Administrator/Views/Subject/Edit.cshtml
@@ -17,7 +17,7 @@
         <h5 class="card-title">@Model.Name</h5>
 
         <!-- Multi Columns Form -->
-        <form class="row g-3" asp-action="Edit" asp-controller="Subject" onsubmit="return callPostActionWithForm(this);">
+        <form class="row g-3" asp-action="Edit" asp-controller="Subject">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="col-md-12">
@@ -81,7 +81,6 @@
         <form asp-action="DeleteConfirmed" asp-controller="Subject">
             <button type="submit" class="btn btn-danger">Delete</button>
             <input type="hidden" asp-for="Id" />
-
         </form>
     </div>
 </div>
