--- a/TutorCenter.Administrator/Views/Course/Index.cshtml
+++ b/TutorCenter.Administrator/Views/Course/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="card">
     <div class="card-body">
-        <h5 class="card-title">Class Informations</h5>
+        <h5 class="card-title">Courses</h5>
 
         <a type="button" class="btn btn-success rounded-pill" asp-action="Create" asp-controller="Course">Create</a>
 
@@ -14,7 +14,6 @@
         <table id="example" class="table datatable">
             <thead>
             <tr>
-
                 <th scope="col">#</th>
                 <th scope="col">Title</th>
                 <th scope="col">Subject</th>
@@ -28,25 +27,27 @@
             </thead>
             <tbody>
 
-            @foreach (var user in Model)
+            @foreach (var course in Model)
             {
                 i++;
                 <tr>
                     <th scope="row">
-                        <input hidden name="Id" value="@user.Id"/>
+                        <input hidden name="Id" value="@course.Id"/>
                         @i
                     </th>
-                    <td>@user.Title</td>
-                    <td>@user.SubjectName</td>
-                    <td>@user.Status</td>
-                    <td>@user.AcademicLevelRequirement</td>
-                    <td>@user.GenderRequirement</td>
-                    <td>@user.LearningMode</td>
+                    <td>@course.Title</td>
+                    <td>@course.SubjectName</td>
+                    <td>@course.Status</td>
+                    <td>@course.AcademicLevelRequirement</td>
+                    <td>@course.GenderRequirement</td>
+                    <td>@course.LearningMode</td>
                     <td>
-                        <a asp-action="Edit" asp-route-id="@user.Id">Edit</a>|
-                        <a asp-action="Detail" asp-route-id="@user.Id">Details</a> |
-
-                        <a href="#" onclick="OpenGetDialog('@Url.Action("Delete", "Course", new { id = @user.Id })','Are you sure you want to delete this class?');">Delete</a>
+                        <a asp-action="Edit" asp-route-id="@course.Id">Edit</a>|
+                        <a asp-action="Detail" asp-route-id="@course.Id">Details</a> |
+                        <a href="#" onclick="OpenGetDialog('@Url.Action("Delete", "Course", new { id = course.Id })',
+                                                                'Are you sure you want to delete this class?');">
+                            Delete
+                        </a>
                     </td>
                 </tr>
             }
@@ -55,5 +56,3 @@
         <!-- End Table with stripped rows -->
     </div>
 </div>
-
-
