--- a/TutorCenter.Administrator/Views/Shared/_Layout.cshtml
+++ b/TutorCenter.Administrator/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
     <link href="~/assets/vendor/quill/quill.bubble.css" rel="stylesheet">
     <link href="~/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="~/assets/vendor/simple-datatables/style.css" rel="stylesheet">
+    <link href="~/assets/vendor/alertifyjs/css/alertify.min.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
     <link href="~/assets/css/style.css" rel="stylesheet">
@@ -259,6 +260,8 @@
 <script src="~/assets/vendor/simple-datatables/simple-datatables.js"></script>
 <script src="~/assets/vendor/tinymce/tinymce.min.js"></script>
 <script src="~/assets/vendor/php-email-form/validate.js"></script>
+<script src="~/assets/vendor/alertifyjs/alertify.js"></script>
+<script src="~/assets/vendor/alertifyjs/alertify.min.js"></script>
 <!-- Template Main JS File -->
 <script src="~/assets/js/main.js"></script>
 <script type="text/javascript" src="~/lib/jquery/dist/jquery.js"></script>
