--- a/TutorCenter.Administrator/Views/Course/Edit.cshtml
+++ b/TutorCenter.Administrator/Views/Course/Edit.cshtml
@@ -11,8 +11,6 @@
     List<string> statuses = ViewData["Statuses"] as List<string> ?? new List<string>();
 
     var subjects = (List<SubjectDto>)(ViewData["Subjects"] ?? "");
-
-
 }
 <h1>Edit</h1>
 
@@ -24,7 +22,7 @@
 
 <h4>@Model.Title</h4>
 
-<hr />
+<hr/>
 <div class="card">
 
     <div class="card-body">
@@ -36,7 +34,7 @@
 
             <div class="col-md-12">
                 <label asp-for="Title" class="form-label">Title</label>
-                <input type="text" asp-for="Title" class="form-control" />
+                <input type="text" asp-for="Title" class="form-control"/>
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <!-- ----------------------------------- -->
@@ -62,37 +60,37 @@
             </div>
             <div class="col-md-4">
                 <label class="form-label">Contact Number</label>
-                <input type="text" class="form-control" asp-for="ContactNumber" />
+                <input type="text" class="form-control" asp-for="ContactNumber"/>
                 <span asp-validation-for="ContactNumber" class="text-danger"></span>
             </div>
-           
+
 
             <!-- ----------------------------------- -->
 
-            
-  <div class="col-md-4">
-                         <label class="form-label">Learner</label>
-                         <input type="text" hidden="hidden" id="studentId" asp-for="LearnerId" class="form-control" />
-                         <input type="text" class="form-control" asp-for="LearnerName"   />
-                         <span asp-validation-for="LearnerName" class="text-danger"></span>
-                     </div>
-         
-      
-        <div class="col-md-3">
-                        <label asp-for="GenderRequirement" class="form-label">Gender Requirement</label>
-                        <select asp-for="GenderRequirement" class="form-select">
-                            <option selected>@Model.GenderRequirement.ToString()</option>
-        
-                            @foreach (string i in genders)
-                            {
-                                @if (i != Model.GenderRequirement.ToString())
-                                {
-                                    <option> @i </option>
-                                }
-                            }
-                        </select>
-                        <span asp-validation-for="GenderRequirement" class="text-danger"></span>
-                    </div>
+
+            <div class="col-md-4">
+                <label class="form-label">Learner</label>
+                <input type="text" hidden="hidden" id="studentId" asp-for="LearnerId" class="form-control"/>
+                <input type="text" class="form-control" asp-for="LearnerName"/>
+                <span asp-validation-for="LearnerName" class="text-danger"></span>
+            </div>
+
+
+            <div class="col-md-3">
+                <label asp-for="GenderRequirement" class="form-label">Gender Requirement</label>
+                <select asp-for="GenderRequirement" class="form-select">
+                    <option selected>@Model.GenderRequirement.ToString()</option>
+
+                    @foreach (string i in genders)
+                    {
+                        @if (i != Model.GenderRequirement.ToString())
+                        {
+                            <option> @i </option>
+                        }
+                    }
+                </select>
+                <span asp-validation-for="GenderRequirement" class="text-danger"></span>
+            </div>
             <div class="col-md-3">
                 <label asp-for="LearningMode" class="form-label">Learning Mode</label>
                 <select asp-for="LearningMode" class="form-select">
@@ -108,88 +106,90 @@
                 </select>
                 <span asp-validation-for="LearningMode" class="text-danger"></span>
             </div>
-        <div class="col-md-3">
-            <label asp-for="AcademicLevelRequirement" class="form-label">Academic level requirement</label>
-            <select asp-for="AcademicLevelRequirement" class="form-select">
-                <option selected>@Model.AcademicLevelRequirement.ToString()</option>
+            <div class="col-md-3">
+                <label asp-for="AcademicLevelRequirement" class="form-label">Academic level requirement</label>
+                <select asp-for="AcademicLevelRequirement" class="form-select">
+                    <option selected>@Model.AcademicLevelRequirement.ToString()</option>
 
-                @foreach (string i in academics)
-                {
-                    @if (i != Model.AcademicLevelRequirement.ToString())
+                    @foreach (string i in academics)
                     {
-                        <option> @i </option>
+                        @if (i != Model.AcademicLevelRequirement.ToString())
+                        {
+                            <option> @i </option>
+                        }
                     }
-                }
-            </select>
-            <span asp-validation-for="AcademicLevelRequirement" class="text-danger"></span>
-        </div>
-           <div class="col-md-3">
-                        <label asp-for="Status" class="form-label">Current status</label>
-                        <select asp-for="Status" class="form-select">
-                            <option selected>@Model.Status.ToString()</option>
-        
-                            @foreach (string i in statuses)
-                            {
-                                @if (i != Model.Status.ToString())
-                                {
-                                    <option> @i </option>
-                                }
-                            }
-                        </select>
-                        <span asp-validation-for="Status" class="text-danger"></span>
-        
-                    </div>
+                </select>
+                <span asp-validation-for="AcademicLevelRequirement" class="text-danger"></span>
+            </div>
+            <div class="col-md-3">
+                <label asp-for="Status" class="form-label">Current status</label>
+                <select asp-for="Status" class="form-select">
+                    <option selected>@Model.Status.ToString()</option>
+
+                    @foreach (string i in statuses)
+                    {
+                        @if (i != Model.Status.ToString())
+                        {
+                            <option> @i </option>
+                        }
+                    }
+                </select>
+                <span asp-validation-for="Status" class="text-danger"></span>
+
+            </div>
             <!-- ----------------------------------- -->
 
 
             <div class="col-md-3">
                 <label asp-for="Fee" class="form-label">Fee</label>
-                <input type="number" class="form-control" asp-for="Fee" placeholder="0.99" />
+                <input type="number" class="form-control" asp-for="Fee" placeholder="0.99"/>
                 <span asp-validation-for="Fee" class="text-danger"></span>
 
             </div>
             <div class="col-md-3">
                 <label asp-for="ChargeFee" class="form-label">Charge Fee</label>
-                <input type="number" class="form-control" asp-for="ChargeFee" placeholder="0.99" />
+                <input type="number" class="form-control" asp-for="ChargeFee" placeholder="0.99"/>
                 <span asp-validation-for="ChargeFee" class="text-danger"></span>
 
             </div>
-          <div class="col-md-3">
-                         <label class="form-label">Tutor</label>
-                         <input type="text" hidden="hidden" id="tutorId" asp-for="TutorId" class="form-control" />
-                         <input type="text" class="form-control" id="tutorInfor" value="@Model.TutorName - @Model.TutorPhoneNumber" readonly="readonly" />
-                         <span asp-validation-for="TutorId" class="text-danger"></span>
-                     </div>
-         
-         
-                     <div class="col-md-3">
-                         <label class="form-label">Action</label>
-         
-                         <div class="row">
-         
-                             <button type="button" class="col-4 btn btn-primary" onclick="OpenGetDialog('@Url.Action("PickTutor", "Course")','Pick tutor')">
-                                 Pick Tutor
-                             </button> 
-                            
-                             <button type="button" class="col-4  btn btn-outline-secondary"
-                                     onclick="OpenGetDialog('@Url.Action("ViewTutor", "Course", new { id = @Model.TutorId })','Tutor information')">
-                                 View Tutor
-                             </button>
-                              <button type="button" class="col-4 btn btn-primary" onclick="OpenGetDialog('@Url.Action("ViewReview", "Course",new { id = @Model.Id })','Review tutor')">
-                                  Review</button>
-                             @* <button type="button" class="col-4  btn btn-outline-secondary" *@
-                             @*         onclick="OpenGetDialog('@Url.Action("ViewRequests", "Course", new { id = @Model.Id })','Tutor information')"> *@
-                             @*     Requests *@
-                             @* </button> *@
-                         </div>
-                     </div>
+            <div class="col-md-3">
+                <label class="form-label">Tutor</label>
+                <input type="text" hidden="hidden" id="tutorId" asp-for="TutorId" class="form-control"/>
+                <input type="text" class="form-control" id="tutorInfor" value="@Model.TutorName - @Model.TutorPhoneNumber" readonly="readonly"/>
+                <span asp-validation-for="TutorId" class="text-danger"></span>
+            </div>
+
+
+            <div class="col-md-3">
+                <label class="form-label">Action</label>
+
+                <div class="row">
+
+                    <button type="button" class="col-6 btn btn-primary" onclick="OpenGetDialog('@Url.Action("PickTutor", "Course")','Pick tutor')">
+                        Pick Tutor
+                    </button>
+
+                    <button type="button" class="col-6  btn btn-outline-secondary"
+                            onclick="OpenGetDialog('@Url.Action("ViewTutor", "Course", new { id = @Model.TutorId })','Tutor information')">
+                        View Tutor
+                    </button>
+                </div>
+            </div>
+
+            <div class="col-12">
+                <div class="form-floating">
+                    <textarea class="form-control" placeholder="Review" asp-for="ReviewDetailDto" style="height: 100px;"></textarea>
+                    <label asp-for="ReviewDetailDto" class="form-label">Review detail</label>
+                    <span asp-validation-for="ReviewDetailDto" class="text-danger"></span>
+                </div>
+            </div>
+
             <!-- ----------------------------------- -->
             <div class="col-12">
                 <div class="form-floating">
                     <textarea class="form-control" placeholder="Address" asp-for="Description" style="height: 100px;"></textarea>
                     <label asp-for="Description" class="form-label">Description</label>
                     <span asp-validation-for="Description" class="text-danger"></span>
-
                 </div>
             </div>
             <!-- ----------------------------------- -->
@@ -211,7 +211,7 @@
             </div>
             <div class="col-md-3">
                 <label asp-for="NumberOfLearner" class="form-label">Number Of Student</label>
-                <input type="number" class="form-control" asp-for="NumberOfLearner" />
+                <input type="number" class="form-control" asp-for="NumberOfLearner"/>
                 <span asp-validation-for="NumberOfLearner" class="text-danger"></span>
 
             </div>
@@ -223,7 +223,7 @@
             </div>
             <div class="col-md-3">
                 <label asp-for="SessionPerWeek" class="form-label">Session/Week</label>
-                <input type="number" class="form-control" asp-for="SessionPerWeek" />
+                <input type="number" class="form-control" asp-for="SessionPerWeek"/>
                 <span asp-validation-for="SessionPerWeek" class="text-danger"></span>
 
             </div>
@@ -231,76 +231,26 @@
 
             <div class="col-12">
                 <label asp-for="Address" class="form-label">Address</label>
-                <input type="text" class="form-control" asp-for="Address" placeholder="1234 Main St" />
+                <input type="text" class="form-control" asp-for="Address" placeholder="1234 Main St"/>
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
-        
-            <input type="hidden" asp-for="Id" />
+
+            <input type="hidden" asp-for="Id"/>
             <div class="text-center">
                 <button type="submit" class="btn btn-primary">Submit</button>
                 <a type="reset" asp-action="Index" class="btn btn-secondary">Cancel</a>
             </div>
             @Html.AntiForgeryToken()
         </form>
-    <!-- End Multi Columns Form -->
-   
+        <!-- End Multi Columns Form -->
+
+
+    </div>
+
 
 </div>
 
 
-    </div>
- <div class="card">
-        <div class="card-body">
-            <h5 class="card-title">Pick the tutor for class</h5>
-    
-            <!-- Table with stripped rows -->
-            <table id="example" class="table datatable">
-                <thead>
-                <tr>
-                    <!-- a avatar comlumn will be added -->
-                    <th scope="col">Status</th>
-                    <th scope="col">Tutor Name</th>
-                    <th scope="col">Phone Number</th>
-                    <th scope="col">Email</th>
-                    <th data-sortable="false" scope="col" style="width:30%;">Actions</th>
-                </tr>
-                </thead>
-                <tbody>
-    
-                @foreach (var requestGettingClassMinimalDto in Model.RequestGettingClassDtos)
-                {
-                    <tr>
-                        
-                        <input hidden name="Id" value="@requestGettingClassMinimalDto.Id"/>
-                          
-                        <td>@requestGettingClassMinimalDto.RequestStatus</td>
-                        
-                        <td><a asp-controller="Tutor" asp-action="Detail"
-                               asp-route-id="@requestGettingClassMinimalDto.TutorId">
-                            @requestGettingClassMinimalDto.TutorName
-                        </a>
-                            </td>
-                        <td>@requestGettingClassMinimalDto.TutorPhone</td>
-                        <td>@requestGettingClassMinimalDto.TutorEmail</td>
-                       
-                        <td>
-                            <button type="button" class="btn btn-primary"
-                                    onclick="ChooseTutor('@requestGettingClassMinimalDto.TutorId','@requestGettingClassMinimalDto.TutorName', '@requestGettingClassMinimalDto.TutorPhone');">
-                                Accept
-                            </button>
-                            <button type="button" class="btn btn-danger"
-                                    onclick="CancelRequest('@Url.Action("EditRequest","Course",new {id = requestGettingClassMinimalDto.Id})')"
-                                    >
-                                Cancel
-                            </button>
-                        </td>
-                    </tr>
-                }
-                </tbody>
-            </table>
-            <!-- End Table with stripped rows -->
-        </div>
-    </div>
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
