--- a/TutorCenter.Administrator/Views/User/Index.cshtml
+++ b/TutorCenter.Administrator/Views/User/Index.cshtml
@@ -20,43 +20,43 @@
         <!-- Table with stripped rows -->
         <table id="example" class="table datatable">
             <thead>
-                <tr>
+            <tr>
 
-                    <th scope="col">#</th>
-                    <th scope="col">Full Name</th>
-                    <th scope="col">Gender</th>
-                    <th scope="col">Birth Year</th>
-                    <th scope="col">Phone Number</th>
-                    <th data-sortable="false" scope="col" style="width:30%;">Actions</th>
+                <th scope="col">#</th>
+                <th scope="col">Full Name</th>
+                <th scope="col">Gender</th>
+                <th scope="col">Birth Year</th>
+                <th scope="col">Phone Number</th>
+                <th data-sortable="false" scope="col" style="width:30%;">Actions</th>
 
-                </tr>
+            </tr>
             </thead>
             <tbody>
 
-                @foreach (var user in Model)
-                {
-                    i++;
-                    <tr>
-                        <th scope="row">
-                            <input hidden name="Id" value="@user.Id" />
-                            @i
-                        </th>
-                        <td>@user.FirstName @user.LastName</td>
-                        <td>@user.Gender</td>
-                        <td>@user.BirthYear</td>
-                        <td>@user.PhoneNumber</td>
-                        <td>
-                            <a asp-action="Edit" asp-route-id="@user.Id">Edit</a>|
-                            <a asp-action="Detail" asp-route-id="@user.Id">Details</a> |
-                            <a asp-action="DeleteConfirmed" asp-route-id="@user.Id">Delete</a> |
-                        </td>
-                    </tr>
-                }
+            @foreach (var user in Model)
+            {
+                i++;
+                <tr>
+                    <th scope="row">
+                        <input hidden name="Id" value="@user.Id"/>
+                        @i
+                    </th>
+                    <td>@user.FirstName @user.LastName</td>
+                    <td>@user.Gender</td>
+                    <td>@user.BirthYear</td>
+                    <td>@user.PhoneNumber</td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@user.Id">Edit</a>|
+                        <a asp-action="Detail" asp-route-id="@user.Id">Details</a> |
+                        <a href="#" onclick="OpenGetDialog('@Url.Action("Delete", "User", new { id = user.Id })',
+                                                                                            'Are you sure you want to delete this class?');">
+                            Delete
+                        </a>
+                    </td>
+                </tr>
+            }
             </tbody>
         </table>
         <!-- End Table with stripped rows -->
     </div>
 </div>
-
-
-
